--- a/SL One trip search/Base.lproj/Main.storyboard
+++ b/SL One trip search/Base.lproj/Main.storyboard
@@ -145,13 +145,66 @@
                     <view key="view" contentMode="scaleToFill" id="GLa-rc-gsO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rLw-hM-TQV">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="StationTableViewCell" rowHeight="65" id="lgD-HK-0hb" customClass="StationTableViewCell" customModule="SL_One_trip_search" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lgD-HK-0hb" id="GxT-ru-n0l">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="64.666666666666671"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="lar-pS-mi3">
+                                                    <rect key="frame" x="25" y="21" width="325" height="36"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xmT-pP-NPb">
+                                                            <rect key="frame" x="0.0" y="0.0" width="45" height="20.333333333333332"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Area" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bLj-6B-fJ3">
+                                                            <rect key="frame" x="0.0" y="20.333333333333336" width="28" height="15.666666666666664"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="lar-pS-mi3" firstAttribute="leading" secondItem="GxT-ru-n0l" secondAttribute="leadingMargin" constant="10" id="0lL-qc-J2N"/>
+                                                <constraint firstItem="lar-pS-mi3" firstAttribute="top" secondItem="GxT-ru-n0l" secondAttribute="topMargin" constant="10" id="7uT-UF-4Z5"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="lar-pS-mi3" secondAttribute="trailing" constant="10" id="xsJ-1z-LxD"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="additionalNameLabel" destination="bLj-6B-fJ3" id="Qi4-oa-Ta3"/>
+                                            <outlet property="nameLabel" destination="xmT-pP-NPb" id="5vL-iM-lSL"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="rLw-hM-TQV" firstAttribute="top" secondItem="d8b-hc-X0e" secondAttribute="top" id="Qy2-Ms-zIa"/>
+                            <constraint firstItem="d8b-hc-X0e" firstAttribute="trailing" secondItem="rLw-hM-TQV" secondAttribute="trailing" id="aEA-sp-8V7"/>
+                            <constraint firstItem="d8b-hc-X0e" firstAttribute="bottom" secondItem="rLw-hM-TQV" secondAttribute="bottom" id="dKw-R0-6vP"/>
+                            <constraint firstItem="rLw-hM-TQV" firstAttribute="leading" secondItem="d8b-hc-X0e" secondAttribute="leading" id="rni-uH-cda"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="d8b-hc-X0e"/>
                     </view>
+                    <connections>
+                        <outlet property="searchTableView" destination="rLw-hM-TQV" id="no3-UR-gi4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0IQ-Rr-Ypa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2092" y="71.514242878560722"/>
+            <point key="canvasLocation" x="2092" y="70.935960591133011"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="X9n-Ec-KvZ">
