--- a/SL One trip search/Base.lproj/Main.storyboard
+++ b/SL One trip search/Base.lproj/Main.storyboard
@@ -23,14 +23,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="m2L-dG-uGi">
-                                <rect key="frame" x="16" y="180" width="343" height="114.66666666666669"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="m2L-dG-uGi" userLabel="Control stack view">
+                                <rect key="frame" x="16" y="180" width="304.66666666666669" height="120.66666666666669"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="atD-OV-H3D">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="35.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="304.66666666666669" height="33"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Från:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bu-AC-unZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="39" height="35.666666666666664"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="39" height="33"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="39" id="9ME-af-uZk"/>
                                                 </constraints>
@@ -39,7 +39,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Yx-UF-482">
-                                                <rect key="frame" x="42" y="0.0" width="262.66666666666669" height="35.666666666666664"/>
+                                                <rect key="frame" x="42" y="0.0" width="262.66666666666669" height="33"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <state key="normal" title="Start">
                                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -48,32 +48,19 @@
                                                     <action selector="didTapStartStationButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vle-p9-uJd"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KVd-8t-5E7">
-                                                <rect key="frame" x="307.66666666666669" y="0.0" width="35.333333333333314" height="35.666666666666664"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" secondItem="KVd-8t-5E7" secondAttribute="height" multiplier="1:1" id="xN8-XG-HTp"/>
-                                                </constraints>
-                                                <state key="normal" title="Byt" image="downarrow"/>
-                                                <connections>
-                                                    <action selector="didPressSwapStationsButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="128-tk-mch"/>
-                                                </connections>
-                                            </button>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstItem="KVd-8t-5E7" firstAttribute="height" secondItem="atD-OV-H3D" secondAttribute="height" id="Pn4-gQ-RYl"/>
-                                        </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="aWS-Za-hjl">
-                                        <rect key="frame" x="0.0" y="37.666666666666657" width="343" height="37.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="35" width="303.66666666666669" height="33"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Till:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZH-9D-1Z8">
-                                                <rect key="frame" x="0.0" y="0.0" width="39" height="37.333333333333336"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="39" height="33"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w1R-oF-tAw">
-                                                <rect key="frame" x="41" y="0.0" width="262.66666666666669" height="37.333333333333336"/>
+                                                <rect key="frame" x="41" y="0.0" width="262.66666666666669" height="33"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <state key="normal" title="End">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -82,32 +69,25 @@
                                                     <action selector="didTapEndStationButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LJe-Tw-hBv"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pf6-sS-IWs">
-                                                <rect key="frame" x="305.66666666666669" y="0.0" width="37.333333333333314" height="37.333333333333336"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" secondItem="pf6-sS-IWs" secondAttribute="height" multiplier="1:1" id="ffq-f0-r8v"/>
-                                                </constraints>
-                                                <state key="normal" title="Byt" image="uparrow"/>
-                                                <connections>
-                                                    <action selector="didPressSwapStationsButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="YtU-j8-Ge9"/>
-                                                </connections>
-                                            </button>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstItem="pf6-sS-IWs" firstAttribute="height" secondItem="aWS-Za-hjl" secondAttribute="height" id="VVj-aq-RAo"/>
-                                        </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="mzD-I7-9nt">
-                                        <rect key="frame" x="0.0" y="77" width="172" height="37.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="70" width="136.66666666666666" height="33"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visar resor tidigast om" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4to-wh-gCG">
-                                                <rect key="frame" x="0.0" y="0.0" width="172" height="37.666666666666664"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="136.66666666666666" height="33"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5l9-yZ-S45" userLabel="Senaste sökning">
+                                        <rect key="frame" x="0.0" y="105" width="33" height="15.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="aZH-9D-1Z8" firstAttribute="width" secondItem="8bu-AC-unZ" secondAttribute="width" id="YRm-WP-hQq"/>
@@ -116,7 +96,7 @@
                                 </constraints>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mbs-P1-Vao">
-                                <rect key="frame" x="0.0" y="322.66666666666674" width="375" height="455.33333333333326"/>
+                                <rect key="frame" x="0.0" y="328.66666666666674" width="375" height="449.33333333333326"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="JourneyTableViewCell" rowHeight="60" id="EIW-Hv-V4w" customClass="JourneyTableViewCell" customModule="SL_One_trip_search" customModuleProvider="target">
@@ -132,6 +112,16 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="MKi-Nj-TUf">
                                 <rect key="frame" x="177.66666666666666" y="396" width="20" height="20"/>
                             </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yt6-H9-ktQ">
+                                <rect key="frame" x="316.66666666666669" y="190" width="48.333333333333314" height="48.333333333333343"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Yt6-H9-ktQ" secondAttribute="height" multiplier="1:1" id="aRh-Nr-uGR"/>
+                                </constraints>
+                                <state key="normal" image="circularicon"/>
+                                <connections>
+                                    <action selector="didPressSwapStationsButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="7WS-2A-1Pj"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -139,7 +129,7 @@
                             <constraint firstItem="mbs-P1-Vao" firstAttribute="top" secondItem="m2L-dG-uGi" secondAttribute="bottom" constant="28" id="GL2-iW-w61"/>
                             <constraint firstItem="mbs-P1-Vao" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="KEa-hs-8om"/>
                             <constraint firstItem="MKi-Nj-TUf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Tnb-9F-0wW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="m2L-dG-uGi" secondAttribute="trailing" constant="16" id="Y8E-nj-6lw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Yt6-H9-ktQ" secondAttribute="trailing" constant="10" id="Y8E-nj-6lw"/>
                             <constraint firstItem="m2L-dG-uGi" firstAttribute="top" secondItem="PoI-z5-rgl" secondAttribute="bottom" constant="40" id="ayr-f7-LGa"/>
                             <constraint firstItem="PoI-z5-rgl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="btl-JO-YvW"/>
                             <constraint firstItem="8Yx-UF-482" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.7" id="cH3-jA-QuM"/>
@@ -147,6 +137,8 @@
                             <constraint firstItem="mbs-P1-Vao" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iz9-hV-GM8"/>
                             <constraint firstItem="mbs-P1-Vao" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="jst-XG-XfB"/>
                             <constraint firstItem="PoI-z5-rgl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="uJf-Co-ukA"/>
+                            <constraint firstItem="Yt6-H9-ktQ" firstAttribute="height" secondItem="m2L-dG-uGi" secondAttribute="height" multiplier="0.4" id="uzQ-6g-y3A"/>
+                            <constraint firstItem="Yt6-H9-ktQ" firstAttribute="top" secondItem="m2L-dG-uGi" secondAttribute="top" constant="10" id="wND-gF-TtF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -161,6 +153,7 @@
                         <outlet property="activityIndicator" destination="MKi-Nj-TUf" id="D0T-U9-baA"/>
                         <outlet property="destinationStationButton" destination="w1R-oF-tAw" id="xq5-yq-4tG"/>
                         <outlet property="journeyTableView" destination="mbs-P1-Vao" id="Emt-1e-qx0"/>
+                        <outlet property="latestSearchLabel" destination="5l9-yZ-S45" id="7ex-hd-zeP"/>
                         <outlet property="startStationButton" destination="8Yx-UF-482" id="vib-Sx-dhf"/>
                         <outlet property="timeInfoLabel" destination="4to-wh-gCG" id="V0L-2M-zZH"/>
                     </connections>
@@ -371,7 +364,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="downarrow" width="22" height="26"/>
-        <image name="uparrow" width="22" height="27"/>
+        <image name="circularicon" width="148" height="146"/>
     </resources>
 </document>
